--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,17 @@ spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:batch_schema.sql
 
 logging.level.org.springframework.jdbc.core=DEBUG
+
+trade.configs.gds.containerName=gds-container
+trade.configs.gds.blobName=gds-blob
+
+trade.configs.fm.containerName=fm-container
+trade.configs.fm.blobName=fm-blob
+
+trade.configs.ckj.containerName=ckj-container
+trade.configs.ckj.blobName=ckj-blob
+
+trade.aid-to-type.444=gds
+trade.aid-to-type.555=fm
+trade.aid-to-type.666=ckj
+
