--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,37 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.10.5</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- JUnit Jupiter Engine for running tests -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.10.5</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- JUnit Platform Launcher for launching tests -->
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-launcher</artifactId>
+			<version>1.10.5</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Optional: JUnit Vintage for running JUnit 4 tests -->
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<version>5.10.5</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>com.azure</groupId>
 			<artifactId>azure-storage-blob</artifactId>
 			<version>12.21.1</version> <!-- Replace with your desired version -->
@@ -136,6 +167,20 @@
 			<artifactId>netty-codec-http2</artifactId>
 			<version>4.1.100.Final</version> <!-- Patched version -->
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.7.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>3.11.2</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -159,4 +204,5 @@
 		</dependencies>
 	</dependencyManagement>
 
+	<!-- Optional: JUnit Vintage for running JUnit 4 tests -->
 </project>
